# pg_enigma

./: .actrc  .gitignore  CAMBIOS.md  CHANGES.md  CHANGES_ES.md  Cargo.toml  LICENSE  Makefile  README.md  README.typmod.md  pg_enigma.control
.forgejo/workflows/: cargo-pgrx-test.yaml  tests.yaml
docs/: Enigma-message.md  PgEpgp.md  Tipo_de_dato_cifrado_postgres.dia  references  security-considerations.md
docs/Epgp/: quick-start.md
docs/diagramas/: Tipo_dato_cifrado_Ing.drawio  Tipo_dato_cifrado_esp.drawio  mensaje_enigma_esp.drawio
docs/types/Epgp/: quick-start.md
docs/types/Ersa/: quick-start.md
enigma_macros/: Cargo.toml
enigma_macros/src/: enigma.rs  lib.rs  postgres.rs
postgres/patch/: postgres-13_parse_coerce.diff  postgres-17_parse_coerce.diff
scripts/: pgrx_init_patch
sql/: concrete_type.sql  enigma_casts.sql  enigma_type.sql  epgp_casts.sql  epgp_type.sql  ersa_casts.sql  ersa_type.sql  pgepgp_casts.sql  pgepgp_type.sql  shell_type.sql
src/: common.rs  crypt.rs  decrypt.rs  encrypt.rs  enigma.rs  enigma_pgp.rs  functions.rs  key_map.rs  legacy.rs  lib.rs  message.rs  pgp.rs  priv_key.rs  pub_key.rs  traits.rs  types.rs
src/crypt/: openssl.rs  pgp.rs  rsa.rs
src/types/: enigma.rs  enigma_pgp.rs  enigma_rsa.rs  legacy.rs
test/: alice_private.pem  alice_public.pem  pg_enigma-v0.4-dump.sql  pg_enigma-v0.5-dump.sql  private-key.asc  public-key.asc
