[package]
name = "pg_enigma"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_enigma"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg13"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
#pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
#pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
#pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
#pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
lazy_static = "*"
once_cell = "*"
openssl = "~0.10.64"
pgp = "~0.15.0"

#pgrx = "~0.14.0"
pgrx = { path = "/usr/src/pgrx/pgrx/" }
#pgrx = { git = "https://github.com/SoftwareLibreMx/pgrx.git",  branch = "KBrown/TypmodInOutFuncs" }
#pgrx-macros = "0.14.0"
pgrx-macros = { path = "/usr/src/pgrx/pgrx-macros/" }

rand_chacha = "*"
rand = "*"
regex = "1"
serde = "1.0.202"


[dev-dependencies]
#pgrx-tests = "~0.14.0"
pgrx-tests = { path = "/usr/src/pgrx/pgrx-tests/" }

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
